<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">9010便利店</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_edit_hint">请输入手机号</string>
    <string name="password_edit_hint">请输入密码</string>
    <string name="forget_passwrod_tv">忘记密码</string>
    <string name="login_now_tv">立即登录</string>
    <string name="login_by_other_way">使用其他方式登录</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="register_info_email_hint">请输入邮箱</string>
    <string name="email">邮箱</string>
    <string name="register_info_industry_hint">请输入行业</string>
    <string name="industry">行业</string>
    <string name="company_address">公司地址</string>
    <string name="home_address">住家地址</string>
    <string name="register_info_address_hint">请输入地址</string>
    <string name="classifield_message">保密信息</string>
    <string name="question">问题</string>
    <string name="answer">答案</string>
    <string name="next">下一步</string>
    <string name="jump">跳过</string>
    <string name="comfire">确定</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_add_info">填写信息</string>
    <string name="wallet">钱包</string>
    <string name="numerical">积分</string>
    <string name="record">记录</string>
    <string name="member_rank">会员等级</string>
    <string name="coupon">优惠券</string>
    <string name="setting">设置</string>
    <string name="gold_member">黄金会员</string>
    <string name="rank_0_100_menber">0~100普通会员</string>
    <string name="rank_100_500_menber">100~500白金会员</string>
    <string name="rank_500_1000_menber">500~1000黄金会员</string>
    <string name="scan_exchange">领取优惠券</string>
    <string name="pay">支付</string>
    <string name="recharge">充值</string>
    <string name="transfer_accounts">转账</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    
    <!-- 拍照 -->
    <string name="app_cancel">取消</string>
    <string name="take_photo">照相</string>
    <string name="Choose_from_the_pictures">从图片中选择</string>
    <string name="app_save">保存</string>
    <string name="app_can_not_find_pic">没有找到图片</string>
    <string name="gl_wait">请稍等</string>

</resources>
