<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_background_color">
    <include 
        layout="@layout/common_title_right_txt"/>
    
    <LinearLayout 
        android:id="@+id/register_info_ll_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">
        <RelativeLayout 
            android:id="@+id/gender_btn"
	    	android:layout_width="match_parent"
	    	android:layout_height="50dip"
	   	 	android:layout_marginTop="10dip"
	    	android:background="@color/white">
	    	<ImageView 
	        	android:id="@+id/sex_img"
	        	android:layout_width="20dip"
	        	android:layout_height="20dip"
	        	android:layout_marginLeft="10dip"
	        	android:background="@drawable/xinbie"
	        	android:layout_centerVertical="true"/>
	    	<TextView 
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:textColor="@color/title_bar_tv_color"
	        	android:layout_centerVertical="true"
	        	android:layout_toRightOf="@id/sex_img"
	        	android:layout_marginLeft="10dip"
	        	android:text="@string/sex"/>
	    <ImageView 
	        android:id="@+id/sex_yjt"
	        android:layout_width="8dip"
	        android:layout_height="15dip"
	        android:layout_marginLeft="10dip"
	        android:background="@drawable/yjt"
	        android:layout_marginRight="10dip"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"/>
	    
	    <TextView 
	        	android:id="@+id/sex_tv"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:textColor="@color/title_bar_tv_color"
	        	android:layout_centerVertical="true"
	        	android:layout_toLeftOf="@id/sex_yjt"
	        	android:layout_marginRight="10dip"
	        	android:text="男"/>
	</RelativeLayout>
	
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1px"
	    android:background="@color/app_divider_color"/>
	
	<RelativeLayout 
	    android:id="@+id/birth_btn"
	    android:layout_width="match_parent"
	    android:layout_height="50dip"
	    android:background="@color/white">
	    <ImageView 
	        android:id="@+id/birth_img"
	        android:layout_width="20dip"
	        android:layout_height="20dip"
	        android:layout_marginLeft="10dip"
	        android:background="@drawable/birsday"
	        android:layout_centerVertical="true"/>
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/title_bar_tv_color"
	        android:layout_centerVertical="true"
	        android:layout_toRightOf="@id/birth_img"
	        android:layout_marginLeft="10dip"
	        android:text="@string/birthday"/>
	    <ImageView 
	        android:id="@+id/birth_day"
	        android:layout_width="8dip"
	        android:layout_height="16dip"
	        android:layout_marginLeft="10dip"
	        android:background="@drawable/yjt"
	        android:layout_marginRight="10dip"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"/>
	    <TextView 
	        	android:id="@+id/birthday_tv"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:textColor="@color/title_bar_tv_color"
	        	android:layout_centerVertical="true"
	        	android:layout_toLeftOf="@id/birth_day"
	        	android:layout_marginRight="10dip"
	        	android:text="1993-07-05"/>
	</RelativeLayout>
	
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dip">
        <RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="50dip"
	    android:background="@color/white">
	    <ImageView 
	        android:id="@+id/email_img"
	        android:layout_width="20dip"
	        android:layout_height="20dip"
	        android:layout_marginLeft="10dip"
	        android:background="@drawable/birsday"
	        android:layout_centerVertical="true"/>
	    <TextView 
	        android:id="@+id/email_tv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/title_bar_tv_color"
	        android:layout_centerVertical="true"
	        android:layout_toRightOf="@id/email_img"
	        android:layout_marginLeft="10dip"
	        android:text="@string/email"/>
	    <EditText 
	        android:id="@+id/email_edit"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_toRightOf="@id/email_tv"
	        android:hint="@string/register_info_email_hint"
	        android:textSize="14sp"
	        android:paddingLeft="20dip"
	        android:textColor="@color/title_bar_tv_color"
	        android:background="@color/transparent"/>
	</RelativeLayout>
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1px"
	    android:background="@color/app_divider_color"/>
	
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="50dip"
	    android:background="@color/white">
	    <ImageView 
	        android:id="@+id/industry_img"
	        android:layout_width="20dip"
	        android:layout_height="20dip"
	        android:layout_marginLeft="10dip"
	        android:background="@drawable/hangye"
	        android:layout_centerVertical="true"/>
	    <TextView 
	        android:id="@+id/industry_tv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/title_bar_tv_color"
	        android:layout_centerVertical="true"
	        android:layout_toRightOf="@id/industry_img"
	        android:layout_marginLeft="10dip"
	        android:text="@string/industry"/>
	    <EditText 
	        android:id="@+id/hy_edit"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_toRightOf="@id/industry_tv"
	        android:hint="@string/register_info_industry_hint"
	        android:textSize="14sp"
	        android:paddingLeft="20dip"
	        android:textColor="@color/title_bar_tv_color"
	        android:background="@color/transparent"/>
	</RelativeLayout>
    </LinearLayout>
	
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/register_info_ll_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dip"
        android:visibility="gone">
        <RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="50dip"
	    android:background="@color/white">
	    <ImageView 
	        android:id="@+id/company_address_img"
	        android:layout_width="20dip"
	        android:layout_height="20dip"
	        android:layout_marginLeft="10dip"
	        android:background="@drawable/address"
	        android:layout_centerVertical="true"/>
	    <TextView 
	        android:id="@+id/company_address_tv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/title_bar_tv_color"
	        android:layout_centerVertical="true"
	        android:layout_toRightOf="@id/company_address_img"
	        android:layout_marginLeft="10dip"
	        android:text="@string/company_address"/>
	    <EditText 
	        android:id="@+id/gs_address_edit"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_toRightOf="@id/company_address_tv"
	        android:hint="@string/register_info_address_hint"
	        android:textSize="14sp"
	        android:paddingLeft="20dip"
	        android:textColor="@color/title_bar_tv_color"
	        android:background="@color/transparent"/>
	</RelativeLayout>
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1px"
	    android:background="@color/app_divider_color"/>
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="50dip"
	    android:background="@color/white">
	    <ImageView 
	        android:id="@+id/home_address_img"
	        android:layout_width="20dip"
	        android:layout_height="20dip"
	        android:layout_marginLeft="10dip"
	        android:background="@drawable/address1"
	        android:layout_centerVertical="true"/>
	    <TextView 
	        android:id="@+id/home_address_tv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/title_bar_tv_color"
	        android:layout_centerVertical="true"
	        android:layout_toRightOf="@id/home_address_img"
	        android:layout_marginLeft="10dip"
	        android:text="@string/home_address"/>
	    <EditText 
	        android:id="@+id/jt_address_edit"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_toRightOf="@id/home_address_tv"
	        android:hint="@string/register_info_address_hint"
	        android:textSize="14sp"
	        android:paddingLeft="20dip"
	        android:textColor="@color/title_bar_tv_color"
	        android:background="@color/transparent"/>
	</RelativeLayout>
	
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="50dip"
	    android:background="@color/white"
	    android:layout_marginTop="10dip">
	    <ImageView 
	        android:id="@+id/register_info_email_img"
	        android:layout_width="20dip"
	        android:layout_height="20dip"
	        android:layout_marginLeft="10dip"
	        android:background="@drawable/message"
	        android:layout_centerVertical="true"/>
	    <TextView 
	        android:id="@+id/register_info_company_address_tv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/title_bar_tv_color"
	        android:layout_centerVertical="true"
	        android:layout_toRightOf="@id/register_info_email_img"
	        android:layout_marginLeft="10dip"
	        android:text="@string/classifield_message"/>
	</RelativeLayout>
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1px"
	    android:background="@color/app_divider_color"/>
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="50dip"
	    android:background="@color/white">

	    <TextView
	        android:id="@+id/register_info_question_tv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="10dip"
	        android:text="@string/question"
	        android:textColor="@color/hint_tv_color" />

	    <EditText 
	        android:id="@+id/question_edit"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_toRightOf="@id/register_info_question_tv"
	        android:textSize="14sp"
	        android:paddingLeft="20dip"
	        android:textColor="@color/title_bar_tv_color"
	        android:background="@color/transparent"/>
	</RelativeLayout>
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1px"
	    android:background="@color/app_divider_color"/>
		<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="50dip"
	    android:background="@color/white">

	    <TextView
	        android:id="@+id/answer_tv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="10dip"
	        android:text="@string/answer"
	        android:textColor="@color/hint_tv_color" />

	    <EditText 
	        android:id="@+id/answer_edit"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_toRightOf="@id/answer_tv"
	        android:textSize="14sp"
	        android:paddingLeft="20dip"
	        android:textColor="@color/title_bar_tv_color"
	        android:background="@color/transparent"/>
	</RelativeLayout>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:orientation="horizontal"
        android:layout_marginTop="20dip">
        <Button 
            android:id="@+id/register_jump_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/jump"
            android:background="@drawable/register_comfire_btn_selector_bg"/>
        <Button 
            android:id="@+id/register_next_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:textColor="@color/white"
            android:text="@string/next"
            android:layout_weight="1"
            android:background="@drawable/register_comfire_btn_selector_bg"/>
    </LinearLayout>
</LinearLayout>
