<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_background_color">
    <include 
        android:id="@+id/title_bar"
        layout="@layout/common_title_right_txt"/>
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/logo"
        android:layout_marginBottom="30dip"
        android:layout_marginTop="30dip"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:background="@color/white"
        android:orientation="vertical">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal">
            <ImageView 
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dip"
                android:background="@drawable/phonenumber"/>
            <EditText 
                android:id="@+id/login_username_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:hint="@string/username_edit_hint"
                android:textColorHint="@color/hint_tv_color"
                android:textSize="14sp"
                android:singleLine="true"
                android:paddingLeft="10dip"/>
        </LinearLayout>
        <View 
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/title_bottom_line_color"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:orientation="horizontal">
            <ImageView 
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dip"
                android:background="@drawable/password"/>
            <EditText 
                android:id="@+id/login_password_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:hint="@string/password_edit_hint"
                android:textSize="14sp"
                android:singleLine="true"
                android:password="true"
                android:textColorHint="@color/hint_tv_color"
                android:paddingLeft="10dip"/>
        </LinearLayout>
    </LinearLayout>
	<Button 
	    android:id="@+id/forget_btn"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="@color/transparent"
	    android:text="@string/forget_passwrod_tv"
	    android:layout_gravity="right"
	    android:textColor="@color/hint_tv_color"
	    android:textSize="14sp"
	    android:padding="10dip"/>
	<Button 
	    android:id="@+id/login_btn"
	    android:layout_width="match_parent"
	    android:layout_height="45dip"
	    android:layout_marginLeft="35dip"
	    android:layout_marginRight="35dip"
	    android:text="@string/login_now_tv"
	    android:textColor="@color/white"
	    android:background="@drawable/login_btn_selector_bg"/>
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="30dip"
	    android:layout_marginBottom="20dip">
	    <TextView 
	        android:id="@+id/txt_other_way"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:textColor="@color/hint_tv_color"
	        android:text="@string/login_by_other_way"
	        android:textSize="14sp"/>
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1px"
	        android:layout_centerVertical="true"
	        android:layout_toLeftOf="@id/txt_other_way"
	        android:layout_marginRight="10dip"
	        android:background="@color/app_divider_color"/>
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1px"
	        android:layout_centerVertical="true"
	        android:layout_toRightOf="@id/txt_other_way"
	        android:layout_marginLeft="10dip"
	        android:background="@color/app_divider_color"/>
	</RelativeLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <ImageView 
	        android:id="@+id/wx_login_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dip"
	        android:layout_weight="1"
	        android:src="@drawable/login_wx_selector_bg"/>
	    <ImageView 
	        android:id="@+id/qq_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_marginRight="20dip"
	        android:src="@drawable/login_qq_selector_bg"/>
	</LinearLayout>
</LinearLayout>
