<?xml version="1.0" encoding="utf-8"?>
<com.example.view.commonview.UpDownScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    android:background="@color/app_background_color">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="135dip"
	    android:background="@drawable/bj10">
	    <com.example.view.commonview.CircleImageView 
	        android:id="@+id/icon"
	        android:layout_width="55dip"
	        android:layout_height="55dip"
	        android:layout_marginTop="14dip"
	        app:border_width="0dp"
      		app:border_color="@color/white"
	        android:src="@drawable/tx3"
	        android:layout_centerHorizontal="true"/>
	    <RelativeLayout 
	        android:id="@+id/rl"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/icon"
	        android:layout_marginTop="10dip"
	        android:layout_centerHorizontal="true">
	        <TextView 
	        	android:id="@+id/wd_name"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:textColor="@color/white"
	        	android:layout_centerVertical="true"
	        	android:text="咕咚一只喵"
	        	android:textSize="15sp"/>
	    	<ImageView 
	        	android:layout_width="13dip"
	        	android:layout_height="16dip"
	        	android:background="@drawable/t3"
	        	android:layout_marginLeft="10dip"
	        	android:layout_centerVertical="true"
	        	android:layout_toRightOf="@id/wd_name"/>
	    </RelativeLayout>
	    
	    <RelativeLayout 
	        android:id="@+id/rl2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/rl"
	        android:layout_marginTop="5dip"
	        android:layout_centerHorizontal="true">
	    	<ImageView 
	    	    android:id="@+id/card_img"
	        	android:layout_width="17dip"
	        	android:layout_height="11dip"
	        	android:background="@drawable/t4"
	        	android:layout_marginLeft="10dip"
	        	android:layout_marginRight="10dip"
	        	android:layout_centerVertical="true"/>
	        <TextView 
	        	android:id="@+id/wd_card"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:textColor="@color/white"
	        	android:layout_centerVertical="true"
	        	android:text="会员卡号  123456748"
	        	android:layout_marginTop="10dip"
	        	android:layout_toRightOf="@id/card_img"
	        	android:textSize="13sp"/>
	    	<TextView 
	    	    android:id="@+id/wd_edit"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:drawableLeft="@drawable/edit"
	        	android:layout_marginLeft="10dip"
	        	android:layout_centerVertical="true"
	        	android:textColor="@color/white"
	        	android:text="编辑"
	        	android:layout_toRightOf="@id/wd_card"/>
	    </RelativeLayout>
	    
	    
	</RelativeLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="90dip"
	    android:background="@color/white"
	    android:orientation="horizontal">
	    <RelativeLayout 
	        android:id="@+id/walle_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@drawable/layout_btn_selector">
	        <ImageView 
	            android:id="@+id/wallet_icon"
	            android:layout_width="47dip"
	            android:layout_height="47dip"
	            android:background="@drawable/wallet"
	            android:layout_centerHorizontal="true"
	            android:layout_marginTop="11dip"/>
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/title_bar_tv_color"
	            android:textSize="14sp"
	            android:layout_centerHorizontal="true"
	            android:layout_below="@id/wallet_icon"
	            android:layout_marginTop="6dip"
	            android:text="@string/wallet"/>
	    </RelativeLayout>
	    <View 
	        android:layout_width="1px"
	        android:layout_height="match_parent"
	        android:background="@color/app_divider_color"/>
	    <RelativeLayout
	        android:id="@+id/numerical_btn" 
	        android:layout_width="fill_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@drawable/layout_btn_selector">
	        <ImageView 
	            android:id="@+id/numerical_cion"
	            android:layout_width="47dip"
	            android:layout_height="47dip"
	            android:background="@drawable/jifen"
	            android:layout_centerHorizontal="true"
	            android:layout_marginTop="11dip"/>
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/title_bar_tv_color"
	            android:textSize="14sp"
	            android:layout_centerHorizontal="true"
	            android:layout_below="@id/numerical_cion"
	            android:layout_marginTop="6dip"
	            android:text="@string/numerical"/>
	    </RelativeLayout>
	</LinearLayout>
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1px"
	    android:background="@color/app_divider_color"/>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="90dip"
	    android:background="@color/white"
	    android:orientation="horizontal">
	    <RelativeLayout 
	        android:id="@+id/record_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@drawable/layout_btn_selector">
	        <ImageView 
	            android:id="@+id/record_cion"
	            android:layout_width="47dip"
	            android:layout_height="47dip"
	            android:background="@drawable/record"
	            android:layout_centerHorizontal="true"
	            android:layout_marginTop="11dip"/>
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/title_bar_tv_color"
	            android:textSize="14sp"
	            android:layout_centerHorizontal="true"
	            android:layout_below="@id/record_cion"
	            android:layout_marginTop="6dip"
	            android:text="@string/record"/>
	    </RelativeLayout>
	    <View 
	        android:layout_width="1px"
	        android:layout_height="match_parent"
	        android:background="@color/app_divider_color"/>
	    <RelativeLayout 
	        android:id="@+id/menber_rank_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@drawable/layout_btn_selector">
	        <ImageView 
	            android:id="@+id/menber_rank_icon"
	            android:layout_width="47dip"
	            android:layout_height="47dip"
	            android:background="@drawable/grade"
	            android:layout_centerHorizontal="true"
	            android:layout_marginTop="11dip"/>
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/title_bar_tv_color"
	            android:textSize="14sp"
	            android:layout_centerHorizontal="true"
	            android:layout_below="@id/menber_rank_icon"
	            android:layout_marginTop="6dip"
	            android:text="@string/member_rank"/>
	    </RelativeLayout>
	</LinearLayout>
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1px"
	    android:background="@color/app_divider_color"/>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="90dip"
	    android:background="@color/white"
	    android:orientation="horizontal">
	    <RelativeLayout 
	        android:id="@+id/coupon_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@drawable/layout_btn_selector">
	        <ImageView 
	            android:id="@+id/coupon_cion"
	            android:layout_width="47dip"
	            android:layout_height="47dip"
	            android:background="@drawable/coupon"
	            android:layout_centerHorizontal="true"
	            android:layout_marginTop="11dip"/>
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/title_bar_tv_color"
	            android:textSize="14sp"
	            android:layout_centerHorizontal="true"
	            android:layout_below="@id/coupon_cion"
	            android:layout_marginTop="6dip"
	            android:text="@string/coupon"/>
	        
	    </RelativeLayout>
	    <View 
	        android:layout_width="1px"
	        android:layout_height="match_parent"
	        android:background="@color/app_divider_color"/>
	    <RelativeLayout 
	        android:id="@+id/setting_btn"
	        android:layout_width="fill_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:background="@drawable/layout_btn_selector">
	        <ImageView 
	            android:id="@+id/setting_cion"
	            android:layout_width="47dip"
	            android:layout_height="47dip"
	            android:background="@drawable/setup"
	            android:layout_centerHorizontal="true"
	            android:layout_marginTop="11dip"/>
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@color/title_bar_tv_color"
	            android:textSize="14sp"
	            android:layout_centerHorizontal="true"
	            android:layout_below="@id/setting_cion"
	            android:layout_marginTop="6dip"
	            android:text="@string/setting"/>
	    </RelativeLayout>
	</LinearLayout>

	<Button
	    android:id="@+id/exit_btn"
	    android:layout_width="match_parent"
	    android:layout_height="50dip"
	    android:background="@drawable/person_center_exit_btn_bg"
	    android:layout_marginTop="10dip"
	    android:textSize="14sp"
	    android:text="退出登录"
	    android:textColor="@color/red_txt_color"/>
    </LinearLayout>
	
</com.example.view.commonview.UpDownScrollView>
